# NavRos

./: Dockerfile  README.md
docker/: Dockerfile
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/micro_ros_setup/share/micro_ros_setup/: local_setup.sh  package.sh
install/navros_bringup/share/navros_bringup/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/navros_description/share/navros_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/navros_firmware/share/navros_firmware/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/navros_opencv/lib/navros_opencv/: navros_test2_opencv.py  navros_test_opencv.py
install/navros_opencv/share/navros_opencv/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/navros_remote/lib/navros_remote/: navros_robot_controller_comms.py  navros_vel_pub.py
install/navros_remote/share/navros_remote/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/navros_testing/lib/navros_testing/: navros_test_client.py  navros_test_server.py
log/: latest_build
navros_bringup/: CMakeLists.txt  package.xml
navros_bringup/launch/: navros_drive.launch.xml  navros_gazebo.launch.xml  navros_testing.launch.py
navros_description/: CMakeLists.txt
navros_description/config/: my_controllers.yaml
navros_description/urdf/: camera.xacro  cone_world.world  navros_base.xacro  navros_main.urdf.xacro  ros2_control.xacro
navros_firmware/: CMakeLists.txt
navros_firmware/microros_esp32/micro_ros_encoder_pub/: micro_ros_encoder_pub.ino
navros_firmware/microros_esp32/micro_ros_esp32/: micro_ros_esp32.ino
navros_firmware/microros_esp32/micro_ros_esp32_pub_sub/: micro_ros_esp32_pub_sub.ino
navros_firmware/microros_esp32/micro_ros_subscription_testing/: micro_ros_subscription_testing.ino
navros_firmware/microros_navros_firmware_esp32/: platformio.ini
navros_firmware/navros_firmware_demo/dc_encoder_demo/: dc_encoder_demo.ino
navros_opencv/: CMakeLists.txt  package.xml
navros_opencv/navros_opencv/: navros_robot_controller_gazebo.py  navros_robot_controller_opencv_comms.py  navros_test2_opencv.py  navros_test_opencv.py
navros_remote/: CMakeLists.txt  package.xml
navros_remote/navros_remote/: navros_robot_controller_comms.py  navros_robot_controller_pub.py  navros_robot_controller_server.py  navros_robot_controller_sub.py  navros_vel_pub.py  navros_vel_sub_client.py
navros_testing/: CMakeLists.txt
navros_testing/navros_testing/: navros_test_feedback_motor.py  navros_test_server.py
serial_motor_demo/: setup.cfg
serial_motor_demo_msgs/: CMakeLists.txt
serial_motor_demo_msgs/msg/: FeedbackMotor.msg
(+52 files in other folders)
