<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navros_opencv</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sakharkarom777@gmail.com">om</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>ultralytics</exec_depend>

  <exec_depend>python3-serial</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
